Fix tall DI image overflow in carousel on mobile

--- a/site/gdocs/components/LatestDataInsights.scss
+++ b/site/gdocs/components/LatestDataInsights.scss
@@ -72,6 +72,7 @@ html:not(.js-enabled) .latest-data-insights__card,
 
     @include md-down {
         flex-direction: column;
+        overflow-y: auto;
     }
 }
 
